# malis

./: .gitignore  PYTORCH_CONVERSION.md  README.md  make.sh  pyproject.toml  requirements.txt  setup.py  test_pytorch.py
malis/: __init__.py  malis.pyx  malis_loss.py  setup.py  test_malis.py
