[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "Cython>=0.24",
    "numpy>=1.9",
]
build-backend = "setuptools.build_meta"

[project]
name = "malis"
version = "1.0"
description = "MALIS segmentation loss function"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Srinivas Turaga", email = "turagas@janelia.hhmi.org"},
]
dependencies = [
    "cython>=0.24",
    "numpy>=1.9",
    "h5py",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/TuragaLab/malis"
